@@ -1,3 +1,9 @@
+2007-01-14  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/stl_algobase.h (fill_n(char*, _Size,
+	const signed char&)): Fix signature.
+	* testsuite/25_algorithms/fill/3.cc: New.
+
 2007-01-13  John David Anglin  <dave.anglin@nrc-cnrc.gc>
 
 	* config/cpu/hppa/atomicity.h (__exchange_and_add): Don't use ordered
